[package]
name = "sl-tubectl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.1", features = ["blocking", "json"] }
serde_derive = "1.0.130"
serde = "1.0.144"
dialoguer = "0.10.2"
colored = "2.0.0"
